--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cart-productlistingapp",
+  "name": "cartproductlist",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
